<resources>
    <string name="app_name">Notify Us</string>
    <string name="facebook_application_id" translatable="false">424877444582224</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb424877444582224</string>

    <!-- was "Signing up..." -->
    <string name="fui_progress_dialog_signing_up">Creating your new account hang tight...</string>
    <string name="signInButton">Sign In</string>
    <string name="userName">user name</string>
    <string name="Password">Password</string>
    <string name="margin_top">10dp</string>
    <string name="or">OR</string>
    <string name="sign_up">SIGN UP</string>
    <string name="radio_available">Not Available</string>
    <string name="radio_swap">Swap with Others</string>
    <string name="radio_alarm">Set Alarm</string>
    <string name="text_username">Username</string>

    <!--main activity main layout-->
    <string name="text_day">Sample Day</string>
    <string name="text_slot">0</string>
    <string name="text_time">0:00 0:00</string>
    <string name="text_subject">Subject</string>
    <string name="text_venu">LH0</string>
    <string name="text_name">Name</string>

    <!--search related-->
    <string name="text_search_title">Search</string>
    <string name="text_search_more">Options</string>
    <!--drop downs-->
    <string name="text_more_myduty">My Duties</string>
    <string name="text_more_allduty">All Duties</string>
    <string name="text_more_mark">Mark Available</string>
    <string name="text_more_settings">Settings</string>
    <string name="text_more_logout">LogOut</string>
    <string name="text_more_upload">Update</string>
    <!--reason buttons -->
    <string name="text_btn_ok">Submit</string>
    <string name="text_btn_cancel">Cancel</string>
    <!--login related-->
    <string name="text_input_email">Email</string>
    <string name="text_input_pass">Password</string>
    <string name="text_btn_login">LOGIN</string>
    <string name="text_btn_signup">No account yet? Create one</string>

    <dimen name="margin_top">10dp</dimen>
    <dimen name="font_regular">34sp</dimen>
    <dimen name="font_small">20sp</dimen>
    <dimen name="button_padding">10dp</dimen>

    <!--alert dialog-->
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <!--availabel my_card view-->
    <string name="check_box_available">Available</string>
    <string name="text_heading_time">0:00 0:00</string>
    <string name="text_subheading_day">Balck Day</string>
    <string name="search_hint">search</string>
    <string name="text_available_at">Venu</string>
    <!--detail card-->
    <string name="text_detail_head">Heading</string>
    <string name="text_detail_value">Value</string>
    <!--material design dimens-->
    <dimen name="material_text_button">14sp</dimen>
    <dimen name="material_text_menu">14sp</dimen>
    <dimen name="material_text_caption">12sp</dimen>
    <dimen name="material_text_body1">14sp</dimen>
    <dimen name="material_text_body2">13sp</dimen>
    <dimen name="material_text_subhead">16sp</dimen>
    <dimen name="material_text_title">20sp</dimen>
    <dimen name="material_text_headline">24sp</dimen>
    <dimen name="material_text_display1">34sp</dimen>
    <dimen name="material_text_display2">45sp</dimen>
    <dimen name="material_text_display3">56sp</dimen>
    <dimen name="material_text_padding_small">1dp</dimen>
    <dimen name="material_margin_regular">10dp</dimen>
    <dimen name="material_margin_small">2dp</dimen>
    <dimen name="material_padding_regular">5dp</dimen>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="text_settings_alarm">Reminder Status</string>
    <string name="text_settings_toggle">On</string>


    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="progress_dialog">Getting Data from Firebase</string>
    <string name="please_wait">Please Wait</string>

</resources>
