<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_user"
        android:title="@string/text_more_myduty"
        android:icon="@drawable/ic_action_user"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_all"
        android:title="@string/text_more_allduty"
        android:icon="@drawable/ic_action_group"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_setting"
        android:title="@string/text_more_settings"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/text_more_logout"
        app:showAsAction="never"/>

</menu>