<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="@dimen/material_margin_small"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/venu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_venu"
            android:textSize="@dimen/material_text_subhead"
            android:layout_marginTop="11dp"
            app:layout_constraintTop_toBottomOf="@+id/subj"
            app:layout_constraintRight_toLeftOf="@+id/launcher"
            android:layout_marginRight="8dp"
            app:layout_constraintLeft_toRightOf="@+id/name"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.426" />

        <TextView
            android:id="@+id/slot"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:gravity="center_vertical"
            android:layout_marginStart="7dp"
            android:textAlignment="center"
            android:textSize="@dimen/material_text_headline"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_day"
            android:textSize="@dimen/material_text_subhead"
            app:layout_constraintLeft_toRightOf="@+id/slot"
            android:layout_marginLeft="13dp"
            android:layout_marginTop="0dp"
            android:layout_marginStart="13dp"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/material_text_title"
            android:text="@string/text_name"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@+id/time"
            app:layout_constraintLeft_toRightOf="@+id/slot"
            android:layout_marginStart="23dp"
            android:layout_marginLeft="0dp" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_time"
            android:textSize="@dimen/material_text_body2"
            app:layout_constraintLeft_toRightOf="@+id/slot"
            android:layout_marginLeft="13dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginStart="13dp"
            android:layout_marginTop="1dp" />

        <TextView
            android:id="@+id/subj"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_subject"
            android:textSize="@dimen/material_text_subhead"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintRight_toLeftOf="@+id/launcher"
            android:layout_marginRight="8dp"
            app:layout_constraintLeft_toRightOf="@+id/time"
            android:layout_marginLeft="8dp" />

        <ImageView
            android:id="@+id/launcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_action_more"
            tools:ignore="ContentDescription"
            android:layout_marginRight="7dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="true"/>


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>