<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/slot"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/circle"
            android:gravity="center_vertical"
            android:layout_marginStart="7dp"
            android:textAlignment="center"
            android:textSize="@dimen/material_text_headline"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="7dp"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_heading_time"
            android:textSize="@dimen/material_text_subhead"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/day"
            android:layout_marginStart="67dp"
            app:layout_constraintRight_toLeftOf="@+id/checkBox"
            android:layout_marginRight="0dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.087"
            android:layout_marginEnd="0dp"/>

        <TextView
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_subheading_day"
            android:textSize="@dimen/material_text_headline"
            app:layout_constraintTop_toBottomOf="@+id/time"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="67dp"
            app:layout_constraintRight_toLeftOf="@+id/checkBox"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.09" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box_available"
            android:textSize="@dimen/material_text_subhead"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"/>


    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>